Fix bug where project picker dropdown overlapped selected option
Fixes #2623

--- a/app/styles/_project-bar.less
+++ b/app/styles/_project-bar.less
@@ -301,6 +301,7 @@
     min-width: 0; // so that truncation on .filter-option works
     .form-control {
       background-color: transparent;
+      height: auto;
     }
   }
   .navbar-toggle {
